# src/main/java/com/example/eco_map/api/strategy/MapLayerStrategyResolver.java
@@ -1,19 +1,29 @@
 package com.example.eco_map.api.strategy;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Component
-@RequiredArgsConstructor
 public class MapLayerStrategyResolver {
-    private final List<MapLayerStrategy> strategies;
+    private final Map<MapLayerType, MapLayerStrategy> strategiesByType;
+
+    public MapLayerStrategyResolver(List<MapLayerStrategy> strategies) {
+        this.strategiesByType = strategies.stream()
+                .collect(Collectors.toUnmodifiableMap(
+                        MapLayerStrategy::getType,
+                        Function.identity()
+                ));
+    }
 
     public MapLayerStrategy resolve(String type) {
-        return strategies.stream()
-                .filter(strategy -> strategy.getType().equals(MapLayerTypeConvector.fromString(type)))
-                .findFirst()
-                .orElseThrow(() -> new IllegalArgumentException("Unsupported map layer type: " + type));
+        MapLayerStrategy strategy = strategiesByType.get(MapLayerTypeConverter.fromString(type));
+        if (strategy == null) {
+            throw new IllegalArgumentException("Unsupported map layer type: " + type);
+        }
+        return strategy;
     }
 }
