# src/main/java/com/example/eco_map/api/strategy/MapLayerTypeConvector.java
@@ -1,15 +1,0 @@
-package com.example.eco_map.api.strategy;
-
-public class MapLayerTypeConvector {
-
-
-    public static MapLayerType fromString(String value) {
-        for (MapLayerType target : MapLayerType.values()) {
-            if (target.getValue().equalsIgnoreCase(value)) {
-                return target;
-            }
-        }
-        throw new IllegalArgumentException("Unknown service type value: " + value);
-    }
-
-}
